# kado_project

./: .gitignore  Cargo.toml  README.md  kado_project.code-workspace
assets/: text.toml
src/: barrage.rs  bg.rs  debug.rs  gui.rs  kado.rs  main.rs  player.rs  stage.rs  text.rs
