[package]
name = "kado_project"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
serde = "1.0.193"
serde_derive = "1.0.193"
toml = "0.8.8"
bevy_screen_diagnostics = "0.4.0"
[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
